--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@types/node": "^15.6.1",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
+    "d3-axis": "^3.0.0",
     "firebase": "^8.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "recoil": "^0.3.1",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.2"
   },
