--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^15.6.1",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
+    "d3": "^7.0.0",
     "d3-axis": "^3.0.0",
     "firebase": "^8.6.2",
     "react": "^17.0.2",
@@ -24,7 +25,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "firebase deploy --only hosting"
   },
   "eslintConfig": {
     "extends": [
@@ -43,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/d3": "^7.0.0",
+    "@types/d3-axis": "^3.0.1"
   }
 }
