--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "react-scripts": "4.0.3",
     "recoil": "^0.3.1",
     "typescript": "^4.2.4",
+    "typescript-json-serializer": "^3.4.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject",
     "deploy": "firebase deploy --only hosting"
   },
   "eslintConfig": {
@@ -47,7 +48,13 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.14.5",
+    "@babel/preset-typescript": "^7.14.5",
     "@types/d3": "^7.0.0",
-    "@types/d3-axis": "^3.0.1"
+    "@types/d3-axis": "^3.0.1",
+    "babel-plugin-parameter-decorator": "^1.0.16",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
+    "customize-cra": "^1.0.0",
+    "react-app-rewired": "^2.1.8"
   }
 }
