--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@shren/faust-ui": "^1.0.4",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^13.1.9",
@@ -13,12 +14,14 @@
     "@types/react-dom": "^17.0.5",
     "d3": "^7.0.0",
     "d3-axis": "^3.0.0",
+    "faust-loader": "^1.2.0",
     "firebase": "^8.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "recoil": "^0.3.1",
-    "typescript": "^4.2.4",
+    "standardized-audio-context": "^25.3.13",
+    "typescript": "^4.4.4",
     "typescript-json-serializer": "^3.4.4",
     "web-vitals": "^1.1.2"
   },
