--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@types/react-dom": "^17.0.5",
     "d3": "^7.0.0",
     "d3-axis": "^3.0.0",
-    "faust-loader": "^1.2.0",
+    "faust-loader": "https://github.com/mrkev/faust-loader#b1541b255df745cc5ba97850f0278e01095ae21d",
     "firebase": "^8.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
