--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^13.1.9",
+    "@types/audiobuffer-to-wav": "^1.0.1",
     "@types/dom-mediacapture-record": "^1.0.7",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.6.1",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
+    "audiobuffer-to-wav": "^1.0.0",
     "d3": "^7.1.1",
     "d3-axis": "^3.0.0",
     "faust-loader": "https://github.com/mrkev/faust-loader#9ea3217039979af1aadd7b5517f7b2c2a25f0f7d",
