--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/helper-environment-visitor": "^7.16.7",
     "@shren/faust-ui": "^1.0.4",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
@@ -11,19 +12,18 @@
     "@types/dom-mediacapture-record": "^1.0.7",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.6.1",
-    "@types/react": "^17.0.34",
-    "@types/react-dom": "^17.0.11",
+    "@types/react": "^17.0.40",
+    "@types/react-dom": "^17.0.13",
     "audiobuffer-to-wav": "^1.0.0",
-    "d3": "^7.1.1",
+    "d3": "^7.3.0",
     "d3-axis": "^3.0.0",
     "faust-loader": "https://github.com/mrkev/faust-loader#9ea3217039979af1aadd7b5517f7b2c2a25f0f7d",
-    "firebase": "^9.4.0",
+    "firebase": "^9.6.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "recoil": "^0.5.2",
     "standardized-audio-context": "^25.3.13",
-    "typescript": "^4.4.4",
+    "typescript": "^4.6.2",
     "typescript-json-serializer": "^3.4.4",
     "web-vitals": "^1.1.2"
   },
@@ -60,6 +60,6 @@
     "babel-plugin-parameter-decorator": "^1.0.16",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "customize-cra": "^1.0.0",
-    "react-app-rewired": "^2.1.8"
+    "react-app-rewired": "^2.2.1"
   }
 }
