--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "17.0.41",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "audiobuffer-to-wav": "1.0.0",
     "d3": "7.4.4",
     "d3-axis": "3.0.0",
@@ -25,8 +26,10 @@
     "react-scripts": "5.0.1",
     "standardized-audio-context": "25.3.28",
     "style-object-to-css-string": "1.0.1",
+    "ts-loader": "^9.3.0",
     "typescript": "4.7.3",
     "typescript-json-serializer": "4.2.0",
+    "vite": "^2.9.10",
     "web-vitals": "2.1.4"
   },
   "scripts": {
@@ -34,7 +37,10 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject",
-    "deploy": "yarn build && firebase deploy --only hosting"
+    "deploy": "yarn build && firebase deploy --only hosting",
+    "vstart": "vite",
+    "vbuild": "tsc && vite build",
+    "serve": "vite preview"
   },
   "eslintConfig": {
     "extends": [
