--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.0.0",
     "react-scripts": "4.0.3",
     "standardized-audio-context": "^25.3.13",
+    "style-object-to-css-string": "^1.0.1",
     "typescript": "^4.6.2",
     "typescript-json-serializer": "^3.4.4",
     "web-vitals": "^1.1.2"
