work, prettier printWidth is now 120

--- a/package.json
+++ b/package.json
@@ -62,5 +62,8 @@
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "customize-cra": "^1.0.0",
     "react-app-rewired": "^2.2.1"
+  },
+  "prettier": {
+    "printWidth": 120
   }
 }
