work on faust-related things

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/helper-environment-visitor": "^7.16.7",
     "@shren/faust-ui": "1.0.4",
+    "@shren/typed-event-emitter": "^1.1.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.2.0",
