--- a/package.json
+++ b/package.json
@@ -3,31 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/helper-environment-visitor": "^7.16.7",
+    "@babel/helper-environment-visitor": "7.18.2",
     "@shren/faust-ui": "1.0.4",
-    "@shren/typed-event-emitter": "^1.1.1",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^14.2.0",
-    "@types/audiobuffer-to-wav": "^1.0.2",
-    "@types/dom-mediacapture-record": "^1.0.11",
-    "@types/jest": "^27.5.1",
-    "@types/node": "^17.0.33",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.4",
-    "audiobuffer-to-wav": "^1.0.0",
-    "d3": "^7.4.4",
-    "d3-axis": "^3.0.0",
+    "@shren/typed-event-emitter": "1.1.1",
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "13.3.0",
+    "@testing-library/user-event": "14.2.0",
+    "@types/audiobuffer-to-wav": "1.0.2",
+    "@types/dom-mediacapture-record": "1.0.11",
+    "@types/jest": "28.1.1",
+    "@types/node": "17.0.41",
+    "@types/react": "18.0.12",
+    "@types/react-dom": "18.0.5",
+    "audiobuffer-to-wav": "1.0.0",
+    "d3": "7.4.4",
+    "d3-axis": "3.0.0",
     "faust-loader": "https://github.com/mrkev/faust-loader#17ed85610729c1c48672b8d89d1b663cbcec5ae3",
-    "firebase": "^9.8.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "firebase": "9.8.2",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
     "react-scripts": "5.0.1",
-    "standardized-audio-context": "^25.3.24",
-    "style-object-to-css-string": "^1.0.1",
-    "typescript": "^4.6.4",
-    "typescript-json-serializer": "^4.1.1",
-    "web-vitals": "^2.1.4"
+    "standardized-audio-context": "25.3.28",
+    "style-object-to-css-string": "1.0.1",
+    "typescript": "4.7.3",
+    "typescript-json-serializer": "4.2.0",
+    "web-vitals": "2.1.4"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -55,14 +55,14 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-decorators": "^7.17.9",
-    "@babel/preset-typescript": "^7.16.7",
-    "@types/d3": "^7.1.0",
-    "@types/d3-axis": "^3.0.1",
-    "babel-plugin-parameter-decorator": "^1.0.16",
-    "babel-plugin-transform-typescript-metadata": "^0.3.2",
-    "customize-cra": "^1.0.0",
-    "react-app-rewired": "^2.2.1"
+    "@babel/plugin-proposal-decorators": "7.18.2",
+    "@babel/preset-typescript": "7.17.12",
+    "@types/d3": "7.4.0",
+    "@types/d3-axis": "3.0.1",
+    "babel-plugin-parameter-decorator": "1.0.16",
+    "babel-plugin-transform-typescript-metadata": "0.3.2",
+    "customize-cra": "1.0.0",
+    "react-app-rewired": "2.2.1"
   },
   "prettier": {
     "printWidth": 120
