--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "terser-webpack-plugin": "^5.2.5",
     "typescript": "4.7.3",
     "typescript-json-serializer": "4.2.0",
+    "web-audio-peak-meter": "^2.1.0",
     "web-vitals": "2.1.4",
     "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0",
