--- a/package.json
+++ b/package.json
@@ -110,9 +110,7 @@
     "@types/d3": "7.4.0",
     "@types/d3-axis": "3.0.1",
     "babel-plugin-parameter-decorator": "1.0.16",
-    "babel-plugin-transform-typescript-metadata": "0.3.2",
-    "customize-cra": "1.0.0",
-    "react-app-rewired": "2.2.1"
+    "babel-plugin-transform-typescript-metadata": "0.3.2"
   },
   "prettier": {
     "printWidth": 120
