--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^3.2.0",
     "faust-loader": "https://github.com/mrkev/faust-loader#17ed85610729c1c48672b8d89d1b663cbcec5ae3",
+    "faust2webaudio": "grame-cncm/faust2webaudio",
     "file-loader": "^6.2.0",
     "firebase": "9.8.4",
     "fs-extra": "^10.0.1",
