--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "pamba",
   "version": "0.1.0",
   "private": true,
+  "//notes": [
+    "js-sha256 added for faust2webaudio"
+  ],
   "dependencies": {
     "@babel/core": "^7.18.6",
     "@babel/helper-environment-visitor": "7.18.6",
@@ -41,7 +44,7 @@
     "eslint": "^8.19.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^3.2.0",
-    "faust-loader": "https://github.com/mrkev/faust-loader#17ed85610729c1c48672b8d89d1b663cbcec5ae3",
+    "faust-loader": "https://github.com/mrkev/faust-loader#changes",
     "faust2webaudio": "grame-cncm/faust2webaudio",
     "file-loader": "^6.2.0",
     "firebase": "9.8.4",
@@ -51,6 +54,7 @@
     "jest": "^27.4.7",
     "jest-resolve": "^27.4.6",
     "jest-watch-typeahead": "^1.0.0",
+    "js-sha256": "^0.9.0",
     "mini-css-extract-plugin": "^2.4.7",
     "postcss": "^8.4.14",
     "postcss-flexbugs-fixes": "^5.0.2",
