--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "//notes": [
-    "js-sha256 added for faust2webaudio"
+    "js-sha256 added for faust2webaudio",
+    "webpack-manifest-plugin is probably unnecessary, see: https://github.com/facebook/create-react-app/issues/6436#issuecomment-465431717"
   ],
   "dependencies": {
     "@babel/core": "^7.19.0",
@@ -17,14 +18,14 @@
     "@shren/faust-ui": "1.0.5",
     "@shren/typed-event-emitter": "1.1.1",
     "@svgr/webpack": "^5.5.0",
-    "@testing-library/jest-dom": "5.16.4",
-    "@testing-library/react": "13.3.0",
-    "@testing-library/user-event": "14.2.1",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "14.4.3",
     "@types/audiobuffer-to-wav": "1.0.2",
     "@types/dom-mediacapture-record": "1.0.11",
     "@types/jest": "28.1.4",
-    "@types/node": "18.0.1",
-    "@types/react": "18.0.14",
+    "@types/node": "18.7.16",
+    "@types/react": "18.0.19",
     "@types/react-dom": "18.0.6",
     "audiobuffer-to-wav": "1.0.0",
     "babel-jest": "^27.4.6",
@@ -32,31 +33,31 @@
     "babel-plugin-named-asset-import": "^0.3.8",
     "babel-preset-react-app": "^10.0.1",
     "bfj": "^7.0.2",
-    "browserslist": "^4.21.1",
+    "browserslist": "^4.21.3",
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
-    "css-loader": "^6.5.1",
-    "css-minimizer-webpack-plugin": "^3.2.0",
-    "d3": "7.4.5",
+    "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.1.0",
+    "d3": "7.6.1",
     "d3-axis": "3.0.0",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
-    "eslint": "^8.19.0",
+    "eslint": "^8.23.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^3.2.0",
     "faust-loader": "https://github.com/mrkev/faust-loader#changes",
     "faust2webaudio": "grame-cncm/faust2webaudio",
     "file-loader": "^6.2.0",
-    "firebase": "9.8.4",
-    "fs-extra": "^10.0.1",
+    "firebase": "9.9.4",
+    "fs-extra": "^10.1.0",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.7",
     "jest-resolve": "^27.4.6",
     "jest-watch-typeahead": "^1.0.0",
     "js-sha256": "^0.9.0",
-    "mini-css-extract-plugin": "^2.4.7",
-    "postcss": "^8.4.14",
+    "mini-css-extract-plugin": "^2.6.1",
+    "postcss": "^8.4.16",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.1",
     "postcss-normalize": "^10.0.1",
@@ -66,12 +67,11 @@
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "18.2.0",
-    "react-refresh": "^0.11.0",
+    "react-refresh": "^0.14.0",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
-    "sass-loader": "^12.3.0",
     "semver": "^7.3.7",
-    "source-map-loader": "^3.0.1",
+    "source-map-loader": "^4.0.0",
     "standardized-audio-context": "25.3.28",
     "style-loader": "^3.3.1",
     "style-object-to-css-string": "1.0.1",
@@ -82,8 +82,8 @@
     "web-vitals": "2.1.4",
     "webpack": "^5.74.0",
     "webpack-dev-server": "^4.11.0",
-    "webpack-manifest-plugin": "^4.0.2",
-    "workbox-webpack-plugin": "^6.5.3"
+    "webpack-manifest-plugin": "^5.0.0",
+    "workbox-webpack-plugin": "^6.5.4"
   },
   "scripts": {
     "start": "node scripts/start.js",
@@ -170,6 +170,9 @@
       "jest-watch-typeahead/testname"
     ],
     "resetMocks": true
+  },
+  "engines": {
+    "node": ">=14.18"
   },
   "babel": {
     "presets": [
