--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "terser-webpack-plugin": "^5.2.5",
     "typescript": "4.9.3",
     "typescript-json-serializer": "4.2.0",
+    "ulid": "^2.3.0",
     "web-audio-peak-meter": "^2.1.0",
     "web-vitals": "2.1.4",
     "webpack": "^5.74.0",
@@ -178,5 +179,6 @@
     "presets": [
       "react-app"
     ]
-  }
+  },
+  "packageManager": "yarn@1.22.19"
 }
