--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "jest-watch-typeahead": "^1.0.0",
     "js-sha256": "^0.9.0",
     "mini-css-extract-plugin": "^2.6.1",
+    "music-metadata-browser": "^2.5.9",
     "postcss": "^8.4.21",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.1",
