--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "webpack-manifest-plugin is probably unnecessary, see: https://github.com/facebook/create-react-app/issues/6436#issuecomment-465431717"
   ],
   "dependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/helper-environment-visitor": "7.18.9",
+    "@babel/core": "^7.21.5",
+    "@babel/helper-environment-visitor": "7.21.5",
     "@linaria/babel-preset": "^3.0.0-beta.22",
     "@linaria/core": "^3.0.0-beta.22",
     "@linaria/react": "^3.0.0-beta.22",
@@ -34,7 +34,7 @@
     "babel-preset-react-app": "^10.0.1",
     "bfj": "^7.0.2",
     "browserslist": "^4.21.4",
-    "camelcase": "^6.3.0",
+    "camelcase": "6.3.0",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^4.2.2",
@@ -42,7 +42,7 @@
     "d3-axis": "3.0.0",
     "dotenv": "^16.0.3",
     "dotenv-expand": "^10.0.0",
-    "eslint": "^8.31.0",
+    "eslint": "^8.39.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^3.2.0",
     "faust-loader": "https://github.com/mrkev/faust-loader#changes",
@@ -77,13 +77,13 @@
     "style-loader": "^3.3.1",
     "style-object-to-css-string": "1.0.1",
     "terser-webpack-plugin": "^5.3.6",
-    "typescript": "4.9.4",
+    "typescript": "5.0.4",
     "typescript-json-serializer": "4.2.0",
     "ulid": "^2.3.0",
     "web-audio-peak-meter": "^2.1.0",
     "web-vitals": "2.1.4",
-    "webpack": "^5.75.0",
-    "webpack-dev-server": "^4.11.1",
+    "webpack": "^5.81.0",
+    "webpack-dev-server": "^4.13.3",
     "webpack-manifest-plugin": "^5.0.0",
     "workbox-webpack-plugin": "^6.5.4"
   },
@@ -112,8 +112,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-decorators": "7.20.7",
-    "@babel/preset-typescript": "7.18.6",
+    "@babel/plugin-proposal-decorators": "7.21.0",
+    "@babel/preset-typescript": "7.21.5",
     "@types/d3": "7.4.0",
     "@types/d3-axis": "3.0.2",
     "babel-plugin-parameter-decorator": "1.0.16",
