--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "webpack-manifest-plugin is probably unnecessary, see: https://github.com/facebook/create-react-app/issues/6436#issuecomment-465431717"
   ],
   "dependencies": {
-    "@babel/core": "^7.21.5",
+    "@babel/core": "^7.21.8",
     "@babel/helper-environment-visitor": "7.21.5",
     "@linaria/babel-preset": "^3.0.0-beta.22",
     "@linaria/core": "^3.0.0-beta.22",
@@ -17,47 +17,47 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@shren/faust-ui": "1.0.5",
     "@shren/typed-event-emitter": "1.1.1",
-    "@svgr/webpack": "^5.5.0",
+    "@svgr/webpack": "^7.0.0",
     "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "13.4.0",
+    "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
     "@types/audiobuffer-to-wav": "1.0.2",
-    "@types/dom-mediacapture-record": "1.0.14",
-    "@types/jest": "29.2.5",
+    "@types/dom-mediacapture-record": "1.0.16",
+    "@types/jest": "29.5.1",
     "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
+    "@types/react": "18.2.5",
+    "@types/react-dom": "18.2.3",
     "audiobuffer-to-wav": "1.0.0",
-    "babel-jest": "^27.4.6",
+    "babel-jest": "^29.5.0",
     "babel-loader": "^9.1.2",
     "babel-plugin-named-asset-import": "^0.3.8",
     "babel-preset-react-app": "^10.0.1",
     "bfj": "^7.0.2",
-    "browserslist": "^4.21.4",
+    "browserslist": "^4.21.5",
     "camelcase": "6.3.0",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^4.2.2",
-    "d3": "7.8.0",
+    "d3": "7.8.4",
     "d3-axis": "3.0.0",
     "dotenv": "^16.0.3",
     "dotenv-expand": "^10.0.0",
     "eslint": "^8.39.0",
     "eslint-config-react-app": "^7.0.1",
-    "eslint-webpack-plugin": "^3.2.0",
+    "eslint-webpack-plugin": "^4.0.1",
     "faust-loader": "https://github.com/mrkev/faust-loader#changes",
     "faust2webaudio": "grame-cncm/faust2webaudio",
     "file-loader": "^6.2.0",
-    "firebase": "9.15.0",
-    "fs-extra": "^10.1.0",
-    "html-webpack-plugin": "^5.5.0",
+    "firebase": "9.21.0",
+    "fs-extra": "^11.1.1",
+    "html-webpack-plugin": "^5.5.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.4.7",
-    "jest-resolve": "^27.4.6",
-    "jest-watch-typeahead": "^1.0.0",
+    "jest": "^29.5.0",
+    "jest-resolve": "^29.5.0",
+    "jest-watch-typeahead": "^2.2.2",
     "js-sha256": "^0.9.0",
-    "mini-css-extract-plugin": "^2.6.1",
-    "music-metadata-browser": "^2.5.9",
+    "mini-css-extract-plugin": "^2.7.5",
+    "music-metadata-browser": "^2.5.10",
     "postcss": "^8.4.21",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.1",
@@ -74,15 +74,15 @@
     "semver": "^7.3.8",
     "source-map-loader": "^4.0.1",
     "standardized-audio-context": "25.3.28",
-    "style-loader": "^3.3.1",
+    "style-loader": "^3.3.2",
     "style-object-to-css-string": "1.0.1",
-    "terser-webpack-plugin": "^5.3.6",
+    "terser-webpack-plugin": "^5.3.7",
     "typescript": "5.0.4",
     "typescript-json-serializer": "4.2.0",
     "ulid": "^2.3.0",
     "web-audio-peak-meter": "^2.1.0",
-    "web-vitals": "2.1.4",
-    "webpack": "^5.81.0",
+    "web-vitals": "3.3.1",
+    "webpack": "^5.82.0",
     "webpack-dev-server": "^4.13.3",
     "webpack-manifest-plugin": "^5.0.0",
     "workbox-webpack-plugin": "^6.5.4"
@@ -117,7 +117,8 @@
     "@types/d3": "7.4.0",
     "@types/d3-axis": "3.0.2",
     "babel-plugin-parameter-decorator": "1.0.16",
-    "babel-plugin-transform-typescript-metadata": "0.3.2"
+    "babel-plugin-transform-typescript-metadata": "0.3.2",
+    "jest-environment-jsdom": "^29.5.0"
   },
   "prettier": {
     "printWidth": 120
