--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "18.2.0",
+    "react-jss": "^10.10.0",
     "react-refresh": "^0.14.0",
     "resolve": "^1.22.1",
     "resolve-url-loader": "^4.0.0",
