--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@shren/faust-ui": "1.0.5",
     "@shren/typed-event-emitter": "1.1.1",
-    "@svgr/webpack": "^7.0.0",
+    "@svgr/webpack": "^8.0.1",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
@@ -25,8 +25,8 @@
     "@types/dom-mediacapture-record": "1.0.16",
     "@types/jest": "29.5.1",
     "@types/node": "18.11.18",
-    "@types/react": "18.2.5",
-    "@types/react-dom": "18.2.3",
+    "@types/react": "18.2.6",
+    "@types/react-dom": "18.2.4",
     "audiobuffer-to-wav": "1.0.0",
     "babel-jest": "^29.5.0",
     "babel-loader": "^9.1.2",
@@ -42,13 +42,13 @@
     "d3-axis": "3.0.0",
     "dotenv": "^16.0.3",
     "dotenv-expand": "^10.0.0",
-    "eslint": "^8.39.0",
+    "eslint": "^8.41.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^4.0.1",
     "faust-loader": "https://github.com/mrkev/faust-loader#changes",
     "faust2webaudio": "grame-cncm/faust2webaudio",
     "file-loader": "^6.2.0",
-    "firebase": "9.21.0",
+    "firebase": "9.22.0",
     "fs-extra": "^11.1.1",
     "html-webpack-plugin": "^5.5.1",
     "identity-obj-proxy": "^3.0.0",
@@ -56,7 +56,7 @@
     "jest-resolve": "^29.5.0",
     "jest-watch-typeahead": "^2.2.2",
     "js-sha256": "^0.9.0",
-    "mini-css-extract-plugin": "^2.7.5",
+    "mini-css-extract-plugin": "^2.7.6",
     "music-metadata-browser": "^2.5.10",
     "postcss": "^8.4.21",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -73,7 +73,7 @@
     "react-resizable-panels": "^0.0.45",
     "resolve": "^1.22.1",
     "resolve-url-loader": "^4.0.0",
-    "rsuite": "^5.33.0",
+    "rsuite": "^5.34.0",
     "semver": "^7.3.8",
     "source-map-loader": "^4.0.1",
     "standardized-audio-context": "25.3.28",
@@ -83,10 +83,9 @@
     "typescript": "5.0.4",
     "typescript-json-serializer": "4.2.0",
     "ulid": "^2.3.0",
-    "web-audio-peak-meter": "^2.1.0",
     "web-vitals": "3.3.1",
-    "webpack": "^5.82.0",
-    "webpack-dev-server": "^4.13.3",
+    "webpack": "^5.83.1",
+    "webpack-dev-server": "^4.15.0",
     "webpack-manifest-plugin": "^5.0.0",
     "workbox-webpack-plugin": "^6.5.4"
   },
@@ -94,7 +93,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "deploy": "yarn build && firebase deploy --only hosting"
+    "deploy": "npm run build && firebase deploy --only hosting"
   },
   "eslintConfig": {
     "extends": [
@@ -121,7 +120,8 @@
     "@types/d3-axis": "3.0.2",
     "babel-plugin-parameter-decorator": "1.0.16",
     "babel-plugin-transform-typescript-metadata": "0.3.2",
-    "jest-environment-jsdom": "^29.5.0"
+    "jest-environment-jsdom": "^29.5.0",
+    "web-audio-peak-meter": "^3.1.0"
   },
   "prettier": {
     "printWidth": 120
