--- a/package.json
+++ b/package.json
@@ -9,11 +9,6 @@
   "dependencies": {
     "@babel/core": "^7.21.8",
     "@babel/helper-environment-visitor": "7.21.5",
-    "@linaria/babel-preset": "^3.0.0-beta.22",
-    "@linaria/core": "^3.0.0-beta.22",
-    "@linaria/react": "^3.0.0-beta.22",
-    "@linaria/shaker": "^3.0.0-beta.22",
-    "@linaria/webpack-loader": "^3.0.0-beta.22",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@shren/faust-ui": "1.0.5",
     "@shren/typed-event-emitter": "1.1.1",
@@ -36,6 +31,7 @@
     "browserslist": "^4.21.5",
     "camelcase": "6.3.0",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "classnames": "^2.3.2",
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^4.2.2",
     "d3": "7.8.4",
