--- a/package.json
+++ b/package.json
@@ -3,13 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "//notes": [
-    "js-sha256 added for faust2webaudio",
-    "webpack-manifest-plugin is probably unnecessary, see: https://github.com/facebook/create-react-app/issues/6436#issuecomment-465431717"
+    "js-sha256 added for faust2webaudio"
   ],
   "dependencies": {
     "@babel/core": "^7.21.8",
-    "@babel/helper-environment-visitor": "7.21.5",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@shren/faust-ui": "1.0.5",
     "@shren/typed-event-emitter": "1.1.1",
     "@svgr/webpack": "^8.0.1",
@@ -18,35 +15,28 @@
     "@testing-library/user-event": "14.4.3",
     "@types/audiobuffer-to-wav": "1.0.2",
     "@types/dom-mediacapture-record": "1.0.16",
-    "@types/jest": "29.5.1",
+    "@types/jest": "29.5.2",
     "@types/node": "18.11.18",
-    "@types/react": "18.2.6",
+    "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "audiobuffer-to-wav": "1.0.0",
     "babel-jest": "^29.5.0",
     "babel-loader": "^9.1.2",
-    "babel-plugin-named-asset-import": "^0.3.8",
     "babel-preset-react-app": "^10.0.1",
-    "bfj": "^7.0.2",
-    "browserslist": "^4.21.5",
     "camelcase": "6.3.0",
-    "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "classnames": "^2.3.2",
     "css-loader": "^6.7.3",
-    "css-minimizer-webpack-plugin": "^4.2.2",
-    "d3": "7.8.4",
+    "d3": "7.8.5",
     "d3-axis": "3.0.0",
     "dotenv": "^16.0.3",
     "dotenv-expand": "^10.0.0",
-    "eslint": "^8.41.0",
+    "eslint": "^8.42.0",
     "eslint-config-react-app": "^7.0.1",
-    "eslint-webpack-plugin": "^4.0.1",
     "faust-loader-vite": "https://github.com/mrkev/faust-loader-vite#changes",
     "faust2webaudio": "grame-cncm/faust2webaudio",
     "file-loader": "^6.2.0",
-    "firebase": "9.22.0",
+    "firebase": "9.22.1",
     "fs-extra": "^11.1.1",
-    "html-webpack-plugin": "^5.5.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.5.0",
     "jest-resolve": "^29.5.0",
@@ -55,11 +45,7 @@
     "mini-css-extract-plugin": "^2.7.6",
     "music-metadata-browser": "^2.5.10",
     "postcss": "^8.4.21",
-    "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.1",
-    "postcss-normalize": "^10.0.1",
-    "postcss-preset-env": "^7.0.2",
-    "prompts": "^2.4.2",
     "react": "18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
@@ -70,23 +56,16 @@
     "resolve": "^1.22.1",
     "resolve-url-loader": "^4.0.0",
     "rollup": "^3.23.0",
-    "rsuite": "^5.34.0",
-    "semver": "^7.3.8",
     "source-map-loader": "^4.0.1",
     "standardized-audio-context": "25.3.28",
     "style-loader": "^3.3.2",
-    "style-object-to-css-string": "1.0.1",
     "terser-webpack-plugin": "^5.3.7",
     "tmp-promise": "^3.0.3",
-    "typescript": "5.0.4",
+    "typescript": "5.1.3",
     "typescript-json-serializer": "4.2.0",
     "ulid": "^2.3.0",
-    "vite-plugin-inspect": "^0.7.27",
-    "web-vitals": "3.3.1",
-    "webpack": "^5.83.1",
-    "webpack-dev-server": "^4.15.0",
-    "webpack-manifest-plugin": "^5.0.0",
-    "workbox-webpack-plugin": "^6.5.4"
+    "vite-plugin-inspect": "^0.7.28",
+    "web-vitals": "3.3.1"
   },
   "scripts": {
     "dev": "vite dev",
@@ -113,9 +92,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-decorators": "7.21.0",
-    "@babel/preset-typescript": "7.21.5",
-    "@rollup/plugin-babel": "^6.0.3",
     "@types/d3": "7.4.0",
     "@types/d3-axis": "3.0.2",
     "@types/fs-extra": "^11.0.1",
@@ -123,7 +99,7 @@
     "babel-plugin-parameter-decorator": "1.0.16",
     "babel-plugin-transform-typescript-metadata": "0.3.2",
     "jest-environment-jsdom": "^29.5.0",
-    "vite": "^4.3.8",
+    "vite": "^4.3.9",
     "vite-plugin-svgr": "^3.2.0",
     "vite-tsconfig-paths": "^4.2.0",
     "web-audio-peak-meter": "^3.1.0"
@@ -189,6 +165,5 @@
     "presets": [
       "react-app"
     ]
-  },
-  "packageManager": "yarn@1.22.19"
+  }
 }
