--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   ],
   "dependencies": {
     "@babel/core": "^7.21.8",
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@shren/faust-ui": "1.0.5",
     "@shren/typed-event-emitter": "1.1.1",
     "@svgr/webpack": "^8.0.1",
@@ -23,6 +25,7 @@
     "babel-jest": "^29.5.0",
     "babel-loader": "^9.1.2",
     "babel-preset-react-app": "^10.0.1",
+    "buffer": "^6.0.3",
     "camelcase": "6.3.0",
     "classnames": "^2.3.2",
     "css-loader": "^6.7.3",
@@ -56,6 +59,7 @@
     "resolve": "^1.22.1",
     "resolve-url-loader": "^4.0.0",
     "rollup": "^3.23.0",
+    "rollup-plugin-polyfill-node": "^0.12.0",
     "source-map-loader": "^4.0.1",
     "standardized-audio-context": "25.3.28",
     "style-loader": "^3.3.2",
