--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@babel/core": "^7.21.8",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
-    "@shren/faust-ui": "1.0.5",
+    "@shren/faust-ui": "1.1.2",
+    "@shren/faustwasm": "^0.0.24",
     "@shren/typed-event-emitter": "1.1.1",
     "@svgr/webpack": "^8.0.1",
     "@testing-library/jest-dom": "5.16.5",
@@ -17,6 +18,7 @@
     "@testing-library/user-event": "14.4.3",
     "@types/audiobuffer-to-wav": "1.0.2",
     "@types/dom-mediacapture-record": "1.0.16",
+    "@types/emscripten": "^1.39.6",
     "@types/jest": "29.5.2",
     "@types/node": "18.11.18",
     "@types/react": "18.2.8",
