--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
+    "@webaudiomodules/api": "^2.0.0-alpha.6",
     "audiobuffer-to-wav": "1.0.0",
     "babel-jest": "^29.5.0",
     "babel-loader": "^9.1.2",
