--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/core": "^7.21.8",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
+    "@ricardo-jrm/use-local-state": "^1.0.1",
     "@shren/faust-ui": "1.1.2",
     "@shren/faustwasm": "^0.0.24",
     "@shren/typed-event-emitter": "1.1.1",
@@ -71,6 +72,7 @@
     "typescript": "5.1.3",
     "typescript-json-serializer": "4.2.0",
     "ulid": "^2.3.0",
+    "use-local-storage-state": "^18.3.3",
     "vite-plugin-inspect": "^0.7.28",
     "web-vitals": "3.3.1"
   },
