--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,5 @@
     "noImplicitOverride": true,
     "types": ["vite/client"]
   },
-  "include": ["src"]
+  "include": ["src", ".eslintrc.js"]
 }
