record in place and option to record to armed track (or new track)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,6 @@
     "noImplicitOverride": true,
     "types": ["vite/client"]
   },
-  "include": ["src", ".eslintrc.js"]
+  "include": ["src", ".eslintrc.js"],
+  "exclude": ["packages/burns-audio-wam"]
 }
