--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-jss": "^10.10.0",
     "react-refresh": "^0.14.0",
     "react-resizable-panels": "^0.0.55",
+    "remixicon": "^3.5.0",
     "resolve": "^1.22.1",
     "resolve-url-loader": "^4.0.0",
     "rollup": "^3.26.3",
