--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "resolve-url-loader": "^4.0.0",
     "rollup": "^3.26.3",
     "rollup-plugin-polyfill-node": "^0.12.0",
+    "simple-state": "file:../substate",
     "source-map-loader": "^4.0.1",
     "standardized-audio-context": "25.3.28",
     "style-loader": "^3.3.2",
