--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@types/emscripten": "^1.39.6",
     "@types/jest": "29.5.2",
     "@types/node": "18.11.18",
-    "@types/react": "18.2.28",
-    "@types/react-dom": "18.2.13",
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
-    "@typescript-eslint/parser": "^6.7.5",
+    "@types/react": "18.2.37",
+    "@types/react-dom": "18.2.15",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
     "@webaudiomodules/api": "^2.0.0-alpha.6",
     "@webaudiomodules/sdk": "^0.0.11",
     "audiobuffer-to-wav": "1.0.0",
@@ -40,15 +40,15 @@
     "d3-axis": "3.0.0",
     "dotenv": "^16.3.1",
     "dotenv-expand": "^10.0.0",
-    "eslint": "^8.49.0",
+    "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-config-standard-with-typescript": "^39.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-config-standard-with-typescript": "^39.1.1",
+    "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "faust-loader-vite": "https://github.com/mrkev/faust-loader-vite#changes",
     "faust2webaudio": "grame-cncm/faust2webaudio",
     "file-loader": "^6.2.0",
-    "firebase": "10.3.1",
+    "firebase": "10.6.0",
     "fs-extra": "^11.1.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.6.2",
@@ -71,7 +71,7 @@
     "resolve-url-loader": "^4.0.0",
     "rollup": "^3.26.3",
     "rollup-plugin-polyfill-node": "^0.12.0",
-    "simple-state": "file:../substate",
+    "structured-state": "file:../substate",
     "source-map-loader": "^4.0.1",
     "standardized-audio-context": "25.3.28",
     "style-loader": "^3.3.2",
@@ -83,7 +83,7 @@
     "use-local-storage-state": "^18.3.3",
     "use-resize-observer": "^9.1.0",
     "uuid": "^9.0.1",
-    "vite-plugin-inspect": "^0.7.40",
+    "vite-plugin-inspect": "^0.7.42",
     "wam-extensions": "^0.2.3",
     "web-vitals": "3.4.0"
   },
@@ -106,16 +106,16 @@
     ]
   },
   "devDependencies": {
-    "@types/d3": "7.4.1",
-    "@types/d3-axis": "3.0.4",
+    "@types/d3": "7.4.3",
+    "@types/d3-axis": "3.0.6",
     "@types/fs-extra": "^11.0.1",
-    "@vitejs/plugin-react": "^4.1.0",
+    "@vitejs/plugin-react": "^4.1.1",
     "babel-plugin-parameter-decorator": "1.0.16",
     "babel-plugin-transform-typescript-metadata": "0.3.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest-environment-jsdom": "^29.6.2",
-    "vite": "^4.4.11",
-    "vite-plugin-svgr": "^3.2.0",
+    "vite": "^4.5.0",
+    "vite-plugin-svgr": "^4.1.0",
     "vite-tsconfig-paths": "^4.2.1",
     "web-audio-peak-meter": "^3.1.0"
   },
