--- a/package.json
+++ b/package.json
@@ -90,7 +90,8 @@
     "dev": "vite dev",
     "build": "vite build",
     "test": "node scripts/test.js",
-    "deploy": "npm run build && firebase deploy --only hosting"
+    "deploy": "npm run build && firebase deploy --only hosting",
+    "publish": "npm run build && firebase deploy --only hosting"
   },
   "browserslist": {
     "production": [
