--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "noImplicitOverride": true,
-    "types": ["vite/client"]
+    "types": ["vite/client", "@webgpu/types"]
   },
   "include": ["src", ".eslintrc.js"],
   "exclude": ["packages/burns-audio-wam"]
