--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-dev-utils": "^12.0.1",
     "react-dom": "18.2.0",
     "react-jss": "^10.10.0",
+    "react-merge-refs": "^2.1.1",
     "react-refresh": "^0.14.0",
     "react-resizable-panels": "^0.0.55",
     "remixicon": "^3.5.0",
