--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "js-sha256": "^0.9.0",
     "mini-css-extract-plugin": "^2.7.6",
     "music-metadata-browser": "^2.5.10",
+    "nanoid": "^5.0.4",
     "postcss": "^8.4.21",
     "postcss-loader": "^6.2.1",
     "react": "18.2.0",
