--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "faust-loader-vite": "https://github.com/mrkev/faust-loader-vite#changes",
     "faust2webaudio": "grame-cncm/faust2webaudio",
     "firebase": "10.7.2",
+    "highlight.js": "^11.9.0",
     "js-sha256": "^0.9.0",
     "music-metadata-browser": "^2.5.10",
     "nanoid": "^5.0.4",
