--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@shren/faust-ui": "1.1.2",
-    "@shren/faustwasm": "^0.0.24",
+    "@shren/faustwasm": "^0.0.25",
     "@shren/typed-event-emitter": "1.1.1",
     "@types/audiobuffer-to-wav": "1.0.4",
     "@types/dom-mediacapture-record": "1.0.19",
     "@types/node": "18.11.18",
-    "@types/react": "18.2.48",
+    "@types/react": "18.2.52",
     "@types/react-dom": "18.2.18",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/parser": "^6.20.0",
     "@webaudiomodules/api": "^2.0.0-alpha.6",
     "@webaudiomodules/sdk": "^0.0.11",
     "@webgpu/types": "^0.1.40",
@@ -45,7 +45,7 @@
     "remixicon": "^4.1.0",
     "rollup": "^4.9.6",
     "rollup-plugin-polyfill-node": "^0.13.0",
-    "standardized-audio-context": "25.3.28",
+    "standardized-audio-context": "25.3.63",
     "standardized-audio-context-mock": "^9.6.33",
     "structured-state": "file:../substate",
     "tmp-promise": "^3.0.3",
@@ -56,8 +56,7 @@
     "uuid": "^9.0.1",
     "vite-plugin-inspect": "^0.8.3",
     "vitest": "^1.2.2",
-    "wam-extensions": "^0.2.3",
-    "web-vitals": "3.5.1"
+    "wam-extensions": "^0.2.3"
   },
   "scripts": {
     "dev": "vite dev",
@@ -71,7 +70,6 @@
     "@types/d3-axis": "3.0.6",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "jest-environment-jsdom": "^29.6.2",
     "vite": "^5.0.12",
     "vite-plugin-svgr": "^4.2.0",
     "vite-tsconfig-paths": "^4.3.1",
