--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "0.1.4",
   "private": true,
   "//notes": [
-    "js-sha256 added for faust2webaudio",
-    "previously used \"@shren/faust-ui\": \"1.1.2\","
+    "previously used \"@shren/faust-ui\": \"1.1.2\"",
+    "svgo for types in vite-plugin-svgr"
   ],
   "dependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@grame/faustwasm": "^0.0.62",
-    "@shren/faustwasm": "^0.0.25",
     "@shren/typed-event-emitter": "1.1.1",
     "@types/audiobuffer-to-wav": "1.0.4",
     "@types/dom-mediacapture-record": "1.0.19",
@@ -32,11 +31,8 @@
     "eslint-config-standard-with-typescript": "^43.0.1",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2",
-    "faust-loader-vite": "https://github.com/mrkev/faust-loader-vite#changes",
-    "faust2webaudio": "grame-cncm/faust2webaudio",
     "firebase": "10.8.0",
     "highlight.js": "^11.9.0",
-    "js-sha256": "^0.9.0",
     "music-metadata-browser": "^2.5.10",
     "nanoid": "^5.0.5",
     "react": "18.2.0",
@@ -50,6 +46,7 @@
     "standardized-audio-context": "25.3.64",
     "standardized-audio-context-mock": "^9.6.34",
     "structured-state": "file:../substate",
+    "svgo": "^3.2.0",
     "tmp-promise": "^3.0.3",
     "typescript": "5.3.3",
     "ulid": "^2.3.0",
@@ -57,7 +54,8 @@
     "uuid": "^9.0.1",
     "vite-plugin-inspect": "^0.8.3",
     "vitest": "^1.3.0",
-    "wam-extensions": "^0.2.3"
+    "wam-extensions": "^0.2.3",
+    "webgpu-waveform": "file:../webgpu-waveform"
   },
   "scripts": {
     "dev": "vite dev",
