--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "@types/audiobuffer-to-wav": "1.0.4",
     "@types/dom-mediacapture-record": "1.0.19",
     "@types/emscripten": "^1.39.13",
-    "@types/node": "18.16.20",
+    "@types/node": "20.12.13",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
-    "@typescript-eslint/parser": "^7.9.0",
+    "@typescript-eslint/eslint-plugin": "^7.11.0",
+    "@typescript-eslint/parser": "^7.11.0",
     "@webaudiomodules/api": "^2.0.0-alpha.6",
     "@webaudiomodules/sdk": "^0.0.11",
     "@webgpu/types": "^0.1.40",
@@ -29,9 +29,9 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.2",
+    "eslint-plugin-react": "^7.35.0",
     "firebase": "10.12.2",
-    "highlight.js": "^11.9.0",
+    "highlight.js": "^11.10.0",
     "music-metadata-browser": "^2.5.10",
     "nanoid": "^5.0.7",
     "react": "18.3.1",
@@ -39,7 +39,7 @@
     "react-jss": "^10.10.0",
     "react-merge-refs": "^2.1.1",
     "remixicon": "^4.2.0",
-    "rollup": "^4.18.0",
+    "rollup": "^4.21.2",
     "rollup-plugin-polyfill-node": "^0.13.0",
     "standardized-audio-context": "25.3.72",
     "standardized-audio-context-mock": "^9.7.6",
@@ -53,7 +53,7 @@
     "vite-plugin-inspect": "^0.8.4",
     "vitest": "^1.6.0",
     "wam-extensions": "^0.2.3",
-    "webgpu-waveform": "file:../webgpu-waveform"
+    "webgpu-waveform-react": "^1.0.0"
   },
   "scripts": {
     "dev": "vite dev",
@@ -67,7 +67,7 @@
     "@types/d3-axis": "3.0.6",
     "@vitejs/plugin-react": "^4.3.0",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "vite": "^5.2.12",
+    "vite": "^5.4.2",
     "vite-plugin-svgr": "^4.2.0",
     "vite-tsconfig-paths": "^4.3.2",
     "web-audio-peak-meter": "^3.1.0"
