update eslint to flat config, fix linting and update eslint

--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
     "@types/node": "20.12.13",
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.11.0",
-    "@typescript-eslint/parser": "^7.11.0",
     "@webaudiomodules/api": "^2.0.0-alpha.6",
     "@webaudiomodules/sdk": "^0.0.11",
     "@webgpu/types": "^0.1.40",
@@ -26,9 +24,6 @@
     "classnames": "^2.5.1",
     "d3": "7.9.0",
     "d3-axis": "3.0.0",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.35.0",
     "firebase": "10.13.1",
     "highlight.js": "^11.10.0",
     "music-metadata-browser": "^2.5.11",
@@ -46,10 +41,11 @@
     "svgo": "^3.3.2",
     "tmp-promise": "^3.0.3",
     "typescript": "5.5.4",
+    "typescript-eslint": "^8.3.0",
     "ulid": "^2.3.0",
     "use-resize-observer": "^9.1.0",
     "vite-plugin-inspect": "^0.8.7",
-    "vitest": "^1.6.0",
+    "vitest": "^2.0.5",
     "wam-extensions": "^0.2.3",
     "webgpu-waveform-react": "^1.0.0"
   },
@@ -61,10 +57,17 @@
     "publish": "npm run build && firebase deploy --only hosting"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.1.1",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.9.1",
     "@types/d3": "7.4.3",
     "@types/d3-axis": "3.0.6",
+    "@typescript-eslint/eslint-plugin": "^8.3.0",
+    "@typescript-eslint/parser": "^8.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint": "^9.9.1",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^5.1.0-rc-e948a5ac-20240807",
     "vite": "^5.4.2",
     "vite-plugin-svgr": "^4.2.0",
     "vite-tsconfig-paths": "^4.3.2",
