fix some eslint errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,5 @@
     "types": ["vite/client", "@webgpu/types"]
   },
   "include": ["src", "eslint.config.mjs"],
-  "exclude": ["packages/burns-audio-wam"]
+  "exclude": ["packages"]
 }
