explore system to send immediate wam midi events

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pamba",
-  "version": "0.2.",
+  "version": "0.2.5",
   "private": true,
   "//notes": [
     "svgo for types in vite-plugin-svgr"
