add pro54 and TX81Z synths

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "d3-axis": "3.0.0",
     "firebase": "11.0.1",
     "highlight.js": "^11.10.0",
+    "midi-file": "^1.2.4",
     "music-metadata-browser": "^2.5.11",
     "nanoid": "^5.0.8",
     "prettier": "^3.3.3",
