fix some lints and organize a bit

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/audiobuffer-to-wav": "1.0.4",
     "@types/dom-mediacapture-record": "1.0.21",
     "@types/emscripten": "^1.39.13",
-    "@types/node": "22.7.4",
+    "@types/node": "22.9.0",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
     "@types/webmidi": "^2.1.0",
@@ -25,7 +25,7 @@
     "classnames": "^2.5.1",
     "d3": "7.9.0",
     "d3-axis": "3.0.0",
-    "firebase": "11.0.1",
+    "firebase": "11.0.2",
     "highlight.js": "^11.10.0",
     "midi-file": "^1.2.4",
     "music-metadata-browser": "^2.5.11",
@@ -34,9 +34,9 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-jss": "^10.10.0",
-    "react-markdown": "^8.0.6",
+    "react-markdown": "^9.0.1",
     "remixicon": "^4.5.0",
-    "rollup": "^4.24.4",
+    "rollup": "^4.27.2",
     "rollup-plugin-polyfill-node": "^0.13.0",
     "standardized-audio-context": "25.3.77",
     "standardized-audio-context-mock": "^9.7.14",
@@ -44,11 +44,11 @@
     "svgo": "^3.3.2",
     "tmp-promise": "^3.0.3",
     "typescript": "5.6.3",
-    "typescript-eslint": "^8.13.0",
+    "typescript-eslint": "^8.14.0",
     "ulid": "^2.3.0",
     "use-resize-observer": "^9.1.0",
     "vite-plugin-inspect": "^0.8.7",
-    "vitest": "^2.1.4",
+    "vitest": "^2.1.5",
     "wam-extensions": "^0.2.3",
     "webgpu-waveform": "file:../webgpu-waveform/packages/webgpu-waveform",
     "webgpu-waveform-react": "file:../webgpu-waveform/packages/webgpu-waveform-react"
@@ -56,25 +56,26 @@
   "scripts": {
     "dev": "vite dev",
     "tsc": "npx tsc",
+    "lint": "npx eslint .",
     "build": "vite build",
     "test": "vitest",
     "deploy": "npm run build && firebase deploy --only hosting",
     "publish": "npm run build && firebase deploy --only hosting"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.2.2",
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.14.0",
+    "@eslint/compat": "^1.2.3",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.15.0",
     "@types/d3": "7.4.3",
     "@types/d3-axis": "3.0.6",
-    "@typescript-eslint/eslint-plugin": "^8.13.0",
+    "@typescript-eslint/eslint-plugin": "^8.14.0",
     "@vitejs/plugin-react": "^4.3.3",
-    "eslint": "^9.14.0",
+    "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.1.0-rc-e948a5ac-20240807",
-    "vite": "^5.4.10",
+    "vite": "^5.4.11",
     "vite-plugin-svgr": "^4.3.0",
-    "vite-tsconfig-paths": "^5.1.0",
+    "vite-tsconfig-paths": "^5.1.2",
     "web-audio-peak-meter": "^3.1.0"
   },
   "prettier": {
