set project type to "module"

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pamba",
   "version": "0.2.5",
   "private": true,
+  "type": "module",
   "//notes": [
     "svgo for types in vite-plugin-svgr"
   ],
