--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
-    "@grame/faustwasm": "^0.7.6",
+    "@grame/faustwasm": "^0.7.7",
     "@shren/typed-event-emitter": "1.1.1",
     "@types/audiobuffer-to-wav": "1.0.4",
     "@types/dom-mediacapture-record": "1.0.21",
@@ -20,7 +20,7 @@
     "@types/webmidi": "^2.1.0",
     "@webaudiomodules/api": "^2.0.0-alpha.6",
     "@webaudiomodules/sdk": "^0.0.12",
-    "@webgpu/types": "^0.1.51",
+    "@webgpu/types": "^0.1.52",
     "audiobuffer-to-wav": "1.0.0",
     "burns-audio-wam": "file:../../burns-audio-wam",
     "classnames": "^2.5.1",
@@ -36,19 +36,20 @@
     "react-dom": "18.3.1",
     "react-jss": "^10.10.0",
     "react-markdown": "^9.0.1",
-    "remixicon": "^4.5.0",
-    "rollup": "^4.28.1",
+    "react-router": "^7.1.1",
+    "remixicon": "^4.6.0",
+    "rollup": "^4.29.1",
     "rollup-plugin-polyfill-node": "^0.13.0",
     "standardized-audio-context": "25.3.77",
     "standardized-audio-context-mock": "^9.7.14",
     "structured-state": "file:../substate/packages/structured-state",
     "svgo": "^3.3.2",
     "typescript": "5.7.2",
-    "typescript-eslint": "^8.18.0",
+    "typescript-eslint": "^8.18.2",
     "ulid": "^2.3.0",
     "use-resize-observer": "^9.1.0",
     "vite-plugin-faust": "^1.0.0",
-    "vite-plugin-inspect": "^0.10.3",
+    "vite-plugin-inspect": "^0.10.6",
     "vitest": "^2.1.8",
     "wam-extensions": "^0.2.3",
     "webgpu-waveform": "file:../webgpu-waveform/packages/webgpu-waveform",
@@ -69,12 +70,12 @@
     "@eslint/js": "^9.17.0",
     "@types/d3": "7.4.3",
     "@types/d3-axis": "3.0.6",
-    "@typescript-eslint/eslint-plugin": "^8.18.0",
+    "@typescript-eslint/eslint-plugin": "^8.18.2",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
-    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react": "^7.37.3",
     "eslint-plugin-react-hooks": "5.0.0",
-    "vite": "^6.0.3",
+    "vite": "^6.0.6",
     "vite-plugin-svgr": "^4.3.0",
     "vite-tsconfig-paths": "^5.1.4",
     "web-audio-peak-meter": "^3.1.0"
